01-rds/security.tf
############################################
# SECURITY GROUP: RDS (PORT 3306)
############################################

resource "aws_security_group" "rds_sg" {
  name        = "rds-sg" # Name of the security group
  description = "Security group to allow port 3306 access and open all outbound traffic"
  vpc_id      = aws_vpc.rds-vpc.id # Associate SG with the rds VPC

  # Ingress Rule — Allow Postgres traffic from anywhere
  ingress {
    from_port   = 3306          # Starting port
    to_port     = 3306          # Ending port 
    protocol    = "tcp"         # TCP protocol 
    cidr_blocks = ["0.0.0.0/0"] # ⚠️ Open to all IPv4 addresses — not secure for production
  }

  # Egress Rule — Allow all outbound traffic
  egress {
    from_port   = 0             # Start of port range (0 = all)
    to_port     = 0             # End of port range (0 = all)
    protocol    = "-1"          # -1 = all protocols
    cidr_blocks = ["0.0.0.0/0"] # ⚠️ Unrestricted outbound access
  }

  tags = {
    Name = "rds-sg" # Name tag for easier lookup
  }
}
